<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@mipmap/bg">

    <!-- Initial state animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="176dp"
        android:layout_height="179dp"
        android:contentDescription="@string/description_for_animation_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        app:lottie_rawRes="@raw/initial_state" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/top_animation"
        android:layout_width="421dp"
        android:layout_height="151dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:lottie_rawRes="@raw/you_can_say" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ripple_animation"
        android:layout_width="770dp"
        android:layout_height="661dp"
        app:layout_constraintBottom_toBottomOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:layout_constraintTop_toTopOf="@id/animation_view"
        app:layout_constraintVertical_bias="0.498"
        app:lottie_rawRes="@raw/ripple" />

    <TextView
        android:id="@+id/txt_prompt"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:text="@string/you_can_say"
        android:textSize="17dp"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/top_animation"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view" />

    <ImageView
        android:id="@+id/img_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:src="@mipmap/voice_text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:layout_constraintTop_toBottomOf="@id/animation_view" />

    <TextView
        android:id="@+id/txt_listening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listening_prompt"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opening_prompt"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
