<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <ImageButton
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:contentDescription="@string/description_aboutButton"
        android:src="@mipmap/ic_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/speech_output"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/txt_speech_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                style="@style/VoiceInputTextStyle" />

        </ScrollView>

    </FrameLayout>


    <!-- Initial state animation -->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="256dp"
        android:layout_height="285dp"
        android:contentDescription="@string/description_for_animation_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643"
        app:lottie_rawRes="@raw/initial_state" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/top_animation"
        android:layout_width="421dp"
        android:layout_height="151dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:lottie_rawRes="@raw/you_can_say" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ripple_animation"
        android:layout_width="1170dp"
        android:layout_height="883dp"
        app:layout_constraintBottom_toBottomOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:layout_constraintTop_toTopOf="@id/animation_view"
        app:layout_constraintVertical_bias="0.486"
        app:lottie_rawRes="@raw/ripple" />

    <TextView
        android:id="@+id/txt_prompt"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/you_can_say"
        android:textSize="17sp"
        android:visibility="visible"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/top_animation"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view" />

    <ImageView
        android:id="@+id/img_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:src="@mipmap/voice_text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:layout_constraintTop_toBottomOf="@id/animation_view" />

    <TextView
        android:id="@+id/txt_listening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/listening_prompt"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:layout_constraintTop_toBottomOf="@id/animation_view" />

    <TextView
        android:id="@+id/txt_opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/opening_prompt"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:layout_constraintTop_toBottomOf="@id/animation_view" />

</androidx.constraintlayout.widget.ConstraintLayout>